fixed bug with bg-image size & position on mobile screens; fixed z-index bug with mobile menu

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,3 +85,10 @@ body {
 	aspect-ratio: 16 / 9;
 	width: 100%;
 }
+
+@media (max-width: 640px) {
+	body {
+		background-attachment: initial;
+		background-attachment: fixed;
+	}
+}
